<resources>
    <string name="app_name">Droos</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="welcome_to_droos_app">Welcome to the Droos app</string>


    <string name="login_button">Login</string>
    <string name="invalid_login_message">Invalid Login please try again</string>
    <string name="gooogle">Gooogle</string>
    <string name="email_pass">email/pass</string>
    <string name="how_you_want_to_log_in">How do you want to log in?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="err_cant_add_teacher">can not save this teacher</string>
    <string name="err_cant_add_subject">can not save this subject</string>
    <string name="err_cant_add_dars">can not save this dars</string>
    <string name="data_is_valid">data is valid</string>
    <string name="err_phone_is_empty">Phone is empty!!</string>
    <string name="err_teacher_is_empty">Please Select a teacher!!</string>
    <string name="err_name_is_empty">Name is empty!!</string>
    <string name="err_subject_is_empty">Subject is empty!!</string>
    <string name="err_date_in_future">Date is after today!!</string>
    <string name="err_duration_not_correct">Duration is not correct!!</string>
    <string name="add_new_teacher">Add new Teacher</string>
    <string name="add_new_subject">Add new Subject</string>
    <string name="err_request_failed">Request failed</string>
    <string name="title_add_teacher">Add Teacher</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="btn_update">Update</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_ok">OK</string>
    <string name="hint_teacher_name">Teacher Name</string>
    <string name="hint_subject_name">Subject Name</string>
    <string name="lbl_name">Name</string>
    <string name="hint_teacher_phone">Teacher Phone</string>
    <string name="hint_choose_teacher">Click to choose a Teacher</string>
    <string name="hint_choose_subject">Click to choose a Subject</string>
    <string name="lbl_phone">Phone</string>
    <string name="lbl_teacher">Teacher</string>
    <string name="lvl_active">Active</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="list">List of</string>
    <string name="display">Display</string>
    <string name="select">Select</string>
    <string name="manage_teacher_form_title">%s Teacher</string>
    <string name="manage_subject_form_title">%s Subject</string>
    <string name="manage_dars_form_title">%s Dars</string>
    <string name="delete_all">delete All</string>
    <string name="msg_teacher_deleted">Teacher deleted</string>
    <string name="msg_subject_deleted">Subject deleted</string>
    <string name="msg_dars_deleted">Dars deleted</string>
    <string name="edit_button">Edit button</string>
    <string name="delete_all_teachers_list">Delete all Teachers list</string>
    <string name="delete_all_subjects_list">Delete all Subject list</string>
    <string name="delete_confirmation">Are you sure you want to delete?</string>
    <string name="no_teacher_in_the_list">No techers in the list</string>
    <string name="no_subject_in_the_list">No Subjects in the list</string>
    <string name="lbl_date">Date</string>
    <string name="lbl_duration_hours">Duration(hours)</string>
    <string name="hint_duration_in_hours">Enter duration in hours</string>
    <string name="lbl_subject">Subject</string>
    <string name="teachers">Teachers</string>
    <string name="subjects">Subjects</string>
    <string name="droos">Droos</string>

</resources>